pt-sample-app/frontproxy/envoy-frontproxy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              json_format:
                START_TIME: "[%START_TIME%]"
                METHOD: "%REQ(:METHOD)% "
                PATH: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                PROTOCOL: "%PROTOCOL%"
                RESPONSE_CODE: "%RESPONSE_CODE%"
                RESPONSE_FLAGS: "%RESPONSE_FLAGS%"
                BYTES_RECEIVED: "%BYTES_RECEIVED%"
                BYTES_SENT: "%BYTES_SENT%"
                DURATION: "%DURATION%"
                RESPONSE_DURATION: "%RESPONSE_DURATION%"
                RESPONSE_TX_DURATION: "%RESPONSE_TX_DURATION%"
                AUTHORITY: "%REQ(:AUTHORITY)%"
                UPSTREAM_HOST: "%UPSTREAM_HOST%"
                UPSTREAM_CLUSTER: "%UPSTREAM_CLUSTER%"
                UPSTREAM-SERVICE-TIME: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                X-FORWARDED-FOR: "%REQ(X-FORWARDED-FOR)%"
                USER-AGENT: "%REQ(USER-AGENT)%"
                X-REQUEST-ID: "%REQ(X-REQUEST-ID)%"
              path: "/var/log/frontproxy.log"
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/ptapp/product"
                route:
                  prefix_rewrite: "/product"
                  cluster: product
              - match:
                  prefix: "/ptapp/customer"
                route:
                  prefix_rewrite: "/customer"
                  cluster: customer  
              - match:
                  prefix: "/ptapp/address"
                route:
                  prefix_rewrite: "/address"
                  cluster: address      
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: product
    connect_timeout: 15.0s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address:
          address: "service_productapp"
          port_value: 10011
  - name: customer
    connect_timeout: 15.0s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address:
          address: "service_customerapp"
          port_value: 10012
  - name: address
    connect_timeout: 15.0s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address:
          address: "service_addressapp"
          port_value: 10013
